PR17696: Ignore DW_AT_comp_dir == s.kernel_build_tree

If DW_AT_comp_dir is the same as s.kernel_build_tree, then it's not a
useful path for s.kernel_source_tree.  By ignoring this case, we allow
the next block to check whether the source symlink is useful instead.